Update backend Docker setup and entrypoint
Refactored Dockerfile and docker-compose.yml to set the backend working directory, install dependencies in the correct context, and adjust the build context and command. Updated run.py to reference the correct app import path for uvicorn.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,14 @@ services:
 
   backend:
     build:
-      context: ./backend
+      context: .
+      dockerfile: backend/Dockerfile
+    working_dir: /app/backend
+    command: python run.py
     ports:
       - "8000:8000"
+    environment:
+      - PORT=8000
 
 volumes:
   hydraulic_data:
