--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
-pandas==2.1.4
-numpy==1.24.3
+pandas==2.2.2
+numpy==1.26.4
 scikit-learn==1.3.2
 joblib==1.3.2
+scipy==1.13.1
